--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -22,7 +22,7 @@
   notify: restart sshd
 
 - name: enforce authorized_keys
-  copy:
+  ansible.builtin.copy:
    src: authorized_keys
    dest: /root/.ssh/authorized_keys
    owner: root
@@ -30,20 +30,20 @@
    mode: '0700'
 
 - name: configure repos
-  template:
+  ansible.builtin.template:
    src: sources.list
    dest: /etc/apt/sources.list
 
 - name: install role packages
-  package: name=vim,htop,git,bridge-utils,sudo,ifenslave,chrony
+  ansible.builtin.package: name=vim,htop,git,bridge-utils,sudo,ifenslave,chrony
 
 - name: enable chrony
-  service:
+  ansible.builtin.service:
    name: chrony
    enabled: true
    state: started
 
 - name: configure dns
-  template:
+  ansible.builtin.template:
    src: resolv.conf
    dest: /etc/resolv.conf
