--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,10 +1,9 @@
 ---
-
 - name: restart sshd
   ansible.builtin.service: name=sshd state=restarted
-  listen: "restart sshd"
+  listen: restart sshd
 
 - name: daemon-reload
   ansible.builtin.systemd:
     daemon_reload: true
-  listen: "daemon-reload"
+  listen: daemon-reload
