--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,9 +1,11 @@
 ---
-- name: restart sshd
-  ansible.builtin.service: name=sshd state=restarted
+- name: Restart sshd
+  ansible.builtin.service:
+    name: sshd
+    state: restarted
   listen: restart sshd
 
-- name: daemon-reload
+- name: Daemon-reload
   ansible.builtin.systemd:
     daemon_reload: true
   listen: daemon-reload
