punt chrony - cant set system time within container

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,6 +43,7 @@
     name: chrony
     enabled: true
     state: started
+  ignore_errors: true
 
 - name: Configure dns
   ansible.builtin.template:
