--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -33,6 +33,10 @@
     src: sources.list
     dest: /etc/apt/sources.list
     mode: "0644"
+  notify: apt update
+
+- name: Flush handlers
+  ansible.builtin.meta: flush_handlers
 
 - name: Install role packages
   ansible.builtin.package:
