reduce grub countdown

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -14,3 +14,7 @@
   ansible.builtin.apt:
     update_cache: true
   listen: apt update
+
+- name: update-grub
+  ansible.builtin.shell: update-grub
+  listen: update-grub
