--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,4 +1,12 @@
 ---
+
+- name: set grub timeout
+  ansible.builtin.lineinfile:
+    path: /etc/default/grub
+    regexp: ^GRUB_TIMEOUT=
+    line: GRUB_TIMEOUT=1
+  notify: update-grub
+
 - name: Enforce ssh key auth
   ansible.builtin.lineinfile:
     path: /etc/ssh/sshd_config
